# TryHTMX

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: github-pages.yml  pre-commit.yaml  test.yaml
docs/source/: api.rst  conf.py  index.rst
src/TryHTMX/: __init__.py  __main__.py  cli.py  main.py
src/TryHTMX/app/: __init__.py  build.py  dependencies.py  main.py  routes.py  run.py
src/TryHTMX/app/routes/: __init__.py  main.py
src/TryHTMX/app/static/: index.html
src/TryHTMX/cli/: __main__.py  app.py  db.py  main.py
src/TryHTMX/orm/: __init__.py  main.py
src/TryHTMX/orm/models/: __init__.py  hero.py
src/TryHTMX/static/: index.html
tests/: test_cli.py  test_main.py
